--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.2",
+    "@types/react-lazyload": "^3.2.0",
     "better-scroll": "^2.0.0-beta.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "transition-hook": "^1.5.2",
